--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=<your_mongodb_connection_string>
+MONGO_URI="mongodb+srv://admin:hjru6d8oZD380URt@cluster0.cryark7.mongodb.net/?retryWrites=true&w=majority"
